SFDCProject/src/objects/Offer__c.object
<CustomObject>
    <description>This object is created to contain information specific to &quot;Offer&quot; type of Promotion.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <formula>text( Service_Contract__r.Billing_Method__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Tracking_Number__c</fullName>
        <description>Will be populated via data loader
Refer SWR-6671 in Jira</description>
        <label>Card Tracking Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Reason_1__c</fullName>
        <formula>&quot;Milestone 1 Reached for&quot;&amp;&quot; &quot;&amp; Promotion__r.Name &amp;&quot;:&quot; &amp;&quot; &quot;&amp; TEXT(Promotion__r.Referral_Payout_on1__c) &amp;&quot; &quot;&amp; &quot;reached&quot; &amp;&quot; &quot;&amp; TEXT(Promotion__r.At_Stage1__c) &amp;&quot; &quot;&amp;&quot;State and earned a&quot; &amp;&quot; &quot;&amp; TEXT(Promotion__r.Referee_Payment_Option1__c)</formula>
        <label>Credit Reason 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Reason_2__c</fullName>
        <formula>&quot;Milestone 2 Reached for&quot;&amp;&quot; &quot;&amp; Promotion__r.Name &amp;&quot;:&quot; &amp;&quot; &quot;&amp; TEXT(Promotion__r.Referral_Payout_on2__c) &amp;&quot; &quot;&amp; &quot;reached&quot; &amp;&quot; &quot;&amp; TEXT(Promotion__r.At_Stage2__c) &amp;&quot; &quot;&amp;&quot;State and earned a&quot; &amp;&quot; &quot;&amp; TEXT(Promotion__r.Referee_Payment_Option2__c)</formula>
        <label>Credit Reason 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Reason_3__c</fullName>
        <formula>&quot;Milestone 3 Reached for&quot;&amp;&quot; &quot;&amp; Promotion__r.Name &amp;&quot;:&quot; &amp;&quot; &quot;&amp; TEXT(Promotion__r.Referral_Payout_on3__c) &amp;&quot; &quot;&amp; &quot;reached&quot; &amp;&quot; &quot;&amp; TEXT(Promotion__r.At_Stage3__c) &amp;&quot; &quot;&amp;&quot;State and earned a&quot; &amp;&quot; &quot;&amp; TEXT(Promotion__r.Referee_Payment_Option3__c)</formula>
        <label>Credit Reason 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_City__c</fullName>
        <label>Customer Address City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_Country__c</fullName>
        <label>Customer Address  Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_State__c</fullName>
        <label>Customer Address State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_Street__c</fullName>
        <label>Customer Address Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_ZipCode__c</fullName>
        <label>Customer Address ZipCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_First_Name__c</fullName>
        <label>Customer First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Last_Name__c</fullName>
        <label>Customer Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone_Number__c</fullName>
        <label>Customer Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Portal_Status__c</fullName>
        <formula>if(NOT(ISBLANK(Generation_Asset__c)),  Generation_Asset__r.Reported_Status__c, if(NOT(ISBLANK(Opportunity__c)),  Opportunity__r.Reported_Status__c,  Lead__r.Reported_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Portal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Salutation__c</fullName>
        <label>Customer Salutation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Utility__c</fullName>
        <formula>text(Generation_Asset__r.ERP_Utility__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generation_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gen Asset</label>
        <referenceTo>Generation_Assets__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Install_Partner__c</fullName>
        <formula>Service_Contract__r.Install_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Non_Monetary_Compensation_1__c</fullName>
        <formula>Promotion__r.Referee_Non_Monetary_Compensation_1__c</formula>
        <label>Offer Non-Monetary Compensation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Non_Monetary_Compensation_2__c</fullName>
        <formula>Promotion__r.Referee_Non_Monetary_Compensation_2__c</formula>
        <label>Offer Non-Monetary Compensation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Non_Monetary_Compensation_3__c</fullName>
        <formula>Promotion__r.Referee_Non_Monetary_Compensation_3__c</formula>
        <label>Offer Non-Monetary Compensation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Payout_1_Paid_Date__c</fullName>
        <label>Offer Payout 1 Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Payout_1_Status__c</fullName>
        <label>Offer Payout 1 Status</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified for payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Payout_2_Paid_Date__c</fullName>
        <label>Offer Payout 2 Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Payout_2_Status__c</fullName>
        <label>Offer Payout 2 Status</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified for payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Payout_3_Paid_Date__c</fullName>
        <label>Offer Payout 3 Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Payout_3_Status__c</fullName>
        <label>Offer Payout 3 Status</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified for payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Payout_Amount_1__c</fullName>
        <formula>Promotion__r.Referee_Payment_Amount1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Payout Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Payout_Amount_2__c</fullName>
        <formula>Promotion__r.Referee_Payment_Amount2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Payout Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Payout_Amount_3__c</fullName>
        <formula>Promotion__r.Referee_Payment_Amount3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Payout Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Promotion_Code__c</fullName>
        <formula>Promotion__r.Promotion_Code__c</formula>
        <label>Offer Promotion Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PTO_Date__c</fullName>
        <formula>Service_Contract__r.Service_Contract_Event__r.PTO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prepaid_Customer_Yes_No__c</fullName>
        <formula>IF( OR(
ISPICKVAL( Service_Contract__r.Billing_Method__c ,&quot;Full Upfront&quot; ), ISPICKVAL(Service_Contract__r.Billing_Method__c,&quot;Prepay&quot; )), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>Prepaid Customer(Yes/No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Utility__c</fullName>
        <formula>TEXT(Generation_Asset__r.ERP_Utility__c)</formula>
        <label>State/Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Fund_Name__c</fullName>
        <formula>text( Service_Contract__r.TE_Fund_Name__c )</formula>
        <label>TE Fund Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_for_Customer_Invoice__c</fullName>
        <formula>&quot;Promotional Offer&quot; &amp;&quot; &quot;&amp; &quot;to&quot; &amp;&quot; &quot;&amp;Customer_Contact__r.FirstName&amp; &quot; &quot;&amp; Customer_Contact__r.LastName &amp;&quot; &quot;&amp; &quot;@&quot; &amp;&quot; &quot;&amp; Customer_Contact__r.MailingStreet</formula>
        <label>Text for Customer Invoice</label>
        <type>Text</type>
    </fields>
    <label>Offer</label>
    <nameField>
        <displayFormat>OFF-{0000000}</displayFormat>
        <label>Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>